pkgs/cupertino_http/lib/src/cronet.dart

// AUTO GENERATED FILE, DO NOT EDIT.
//
// Generated by `package:ffigen`.
// ignore_for_file: type=lint
import 'dart:ffi' as ffi;

/// Bindings for the Foundation URL Loading System and supporting libraries.
///
/// Regenerate bindings with `flutter packages pub run ffigen --config ffigen.yaml`.
///
class cronet_cupertina {
  /// Holds the symbol lookup function.
  final ffi.Pointer<T> Function<T extends ffi.NativeType>(String symbolName)
      _lookup;

  /// The symbols are looked up in [dynamicLibrary].
  cronet_cupertina(ffi.DynamicLibrary dynamicLibrary)
      : _lookup = dynamicLibrary.lookup;

  /// The symbols are looked up with [lookup].
  cronet_cupertina.fromLookup(
      ffi.Pointer<T> Function<T extends ffi.NativeType>(String symbolName)
          lookup)
      : _lookup = lookup;

  /// Create an instance of Cronet_Buffer.
  Cronet_BufferPtr Cronet_Buffer_Create() {
    return _Cronet_Buffer_Create();
  }

  late final _Cronet_Buffer_CreatePtr =
      _lookup<ffi.NativeFunction<Cronet_BufferPtr Function()>>(
          'Cronet_Buffer_Create');
  late final _Cronet_Buffer_Create =
      _Cronet_Buffer_CreatePtr.asFunction<Cronet_BufferPtr Function()>();

  /// Destroy an instance of Cronet_Buffer.
  void Cronet_Buffer_Destroy(
    Cronet_BufferPtr self,
  ) {
    return _Cronet_Buffer_Destroy(
      self,
    );
  }

  late final _Cronet_Buffer_DestroyPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(Cronet_BufferPtr)>>(
          'Cronet_Buffer_Destroy');
  late final _Cronet_Buffer_Destroy =
      _Cronet_Buffer_DestroyPtr.asFunction<void Function(Cronet_BufferPtr)>();

  /// Set and get app-specific Cronet_ClientContext.
  void Cronet_Buffer_SetClientContext(
    Cronet_BufferPtr self,
    Cronet_ClientContext client_context,
  ) {
    return _Cronet_Buffer_SetClientContext(
      self,
      client_context,
    );
  }

  late final _Cronet_Buffer_SetClientContextPtr = _lookup<
      ffi.NativeFunction<
          ffi.Void Function(Cronet_BufferPtr,
              Cronet_ClientContext)>>('Cronet_Buffer_SetClientContext');
  late final _Cronet_Buffer_SetClientContext =
      _Cronet_Buffer_SetClientContextPtr.asFunction<
          void Function(Cronet_BufferPtr, Cronet_ClientContext)>();

  Cronet_ClientContext Cronet_Buffer_GetClientContext(
    Cronet_BufferPtr self,
  ) {
    return _Cronet_Buffer_GetClientContext(
      self,
    );
  }

  late final _Cronet_Buffer_GetClientContextPtr = _lookup<
          ffi.NativeFunction<Cronet_ClientContext Function(Cronet_BufferPtr)>>(
      'Cronet_Buffer_GetClientContext');
  late final _Cronet_Buffer_GetClientContext =
      _Cronet_Buffer_GetClientContextPtr.asFunction<
          Cronet_ClientContext Function(Cronet_BufferPtr)>();

  /// Concrete methods of Cronet_Buffer implemented by Cronet.
  /// The app calls them to manipulate Cronet_Buffer.
  void Cronet_Buffer_InitWithDataAndCallback(
    Cronet_BufferPtr self,
    Cronet_RawDataPtr data,
    int size,
    Cronet_BufferCallbackPtr callback,
  ) {
    return _Cronet_Buffer_InitWithDataAndCallback(
      self,
      data,
      size,
      callback,
    );
  }

  late final _Cronet_Buffer_InitWithDataAndCallbackPtr = _lookup<
          ffi.NativeFunction<
              ffi.Void Function(Cronet_BufferPtr, Cronet_RawDataPtr, ffi.Uint64,
                  Cronet_BufferCallbackPtr)>>(
      'Cronet_Buffer_InitWithDataAndCallback');
  late final _Cronet_Buffer_InitWithDataAndCallback =
      _Cronet_Buffer_InitWithDataAndCallbackPtr.asFunction<
          void Function(Cronet_BufferPtr, Cronet_RawDataPtr, int,
              Cronet_BufferCallbackPtr)>();

  void Cronet_Buffer_InitWithAlloc(
    Cronet_BufferPtr self,
    int size,
  ) {
    return _Cronet_Buffer_InitWithAlloc(
      self,
      size,
    );
  }

  late final _Cronet_Buffer_InitWithAllocPtr = _lookup<
          ffi.NativeFunction<ffi.Void Function(Cronet_BufferPtr, ffi.Uint64)>>(
      'Cronet_Buffer_InitWithAlloc');
  late final _Cronet_Buffer_InitWithAlloc = _Cronet_Buffer_InitWithAllocPtr
      .asFunction<void Function(Cronet_BufferPtr, int)>();

  int Cronet_Buffer_GetSize(
    Cronet_BufferPtr self,
  ) {
    return _Cronet_Buffer_GetSize(
      self,
    );
  }

  late final _Cronet_Buffer_GetSizePtr =
      _lookup<ffi.NativeFunction<ffi.Uint64 Function(Cronet_BufferPtr)>>(
          'Cronet_Buffer_GetSize');
  late final _Cronet_Buffer_GetSize =
      _Cronet_Buffer_GetSizePtr.asFunction<int Function(Cronet_BufferPtr)>();

  Cronet_RawDataPtr Cronet_Buffer_GetData(
    Cronet_BufferPtr self,
  ) {
    return _Cronet_Buffer_GetData(
      self,
    );
  }

  late final _Cronet_Buffer_GetDataPtr =
      _lookup<ffi.NativeFunction<Cronet_RawDataPtr Function(Cronet_BufferPtr)>>(
          'Cronet_Buffer_GetData');
  late final _Cronet_Buffer_GetData = _Cronet_Buffer_GetDataPtr.asFunction<
      Cronet_RawDataPtr Function(Cronet_BufferPtr)>();

  /// Concrete interface Cronet_Buffer is implemented by Cronet.
  /// The app can use this for testing / mocking.
  Cronet_BufferPtr Cronet_Buffer_CreateWith(
    Cronet_Buffer_InitWithDataAndCallbackFunc InitWithDataAndCallbackFunc,
    Cronet_Buffer_InitWithAllocFunc InitWithAllocFunc,
    Cronet_Buffer_GetSizeFunc GetSizeFunc,
    Cronet_Buffer_GetDataFunc GetDataFunc,
  ) {
    return _Cronet_Buffer_CreateWith(
      InitWithDataAndCallbackFunc,
      InitWithAllocFunc,
      GetSizeFunc,
      GetDataFunc,
    );
  }

  late final _Cronet_Buffer_CreateWithPtr = _lookup<
      ffi.NativeFunction<
          Cronet_BufferPtr Function(
              Cronet_Buffer_InitWithDataAndCallbackFunc,
              Cronet_Buffer_InitWithAllocFunc,
              Cronet_Buffer_GetSizeFunc,
              Cronet_Buffer_GetDataFunc)>>('Cronet_Buffer_CreateWith');
  late final _Cronet_Buffer_CreateWith =
      _Cronet_Buffer_CreateWithPtr.asFunction<
          Cronet_BufferPtr Function(
              Cronet_Buffer_InitWithDataAndCallbackFunc,
              Cronet_Buffer_InitWithAllocFunc,
              Cronet_Buffer_GetSizeFunc,
              Cronet_Buffer_GetDataFunc)>();

  /// Destroy an instance of Cronet_BufferCallback.
  void Cronet_BufferCallback_Destroy(
    Cronet_BufferCallbackPtr self,
  ) {
    return _Cronet_BufferCallback_Destroy(
      self,
    );
  }

  late final _Cronet_BufferCallback_DestroyPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(Cronet_BufferCallbackPtr)>>(
          'Cronet_BufferCallback_Destroy');
  late final _Cronet_BufferCallback_Destroy = _Cronet_BufferCallback_DestroyPtr
      .asFunction<void Function(Cronet_BufferCallbackPtr)>();

  /// Set and get app-specific Cronet_ClientContext.
  void Cronet_BufferCallback_SetClientContext(
    Cronet_BufferCallbackPtr self,
    Cronet_ClientContext client_context,
  ) {
    return _Cronet_BufferCallback_SetClientContext(
      self,
      client_context,
    );
  }

  late final _Cronet_BufferCallback_SetClientContextPtr = _lookup<
      ffi.NativeFunction<
          ffi.Void Function(Cronet_BufferCallbackPtr,
              Cronet_ClientContext)>>('Cronet_BufferCallback_SetClientContext');
  late final _Cronet_BufferCallback_SetClientContext =
      _Cronet_BufferCallback_SetClientContextPtr.asFunction<
          void Function(Cronet_BufferCallbackPtr, Cronet_ClientContext)>();

  Cronet_ClientContext Cronet_BufferCallback_GetClientContext(
    Cronet_BufferCallbackPtr self,
  ) {
    return _Cronet_BufferCallback_GetClientContext(
      self,
    );
  }

  late final _Cronet_BufferCallback_GetClientContextPtr = _lookup<
          ffi.NativeFunction<
              Cronet_ClientContext Function(Cronet_BufferCallbackPtr)>>(
      'Cronet_BufferCallback_GetClientContext');
  late final _Cronet_BufferCallback_GetClientContext =
      _Cronet_BufferCallback_GetClientContextPtr.asFunction<
          Cronet_ClientContext Function(Cronet_BufferCallbackPtr)>();

  /// Abstract interface Cronet_BufferCallback is implemented by the app.
  /// The following concrete methods forward call to app implementation.
  /// The app doesn't normally call them.
  void Cronet_BufferCallback_OnDestroy(
    Cronet_BufferCallbackPtr self,
    Cronet_BufferPtr buffer,
  ) {
    return _Cronet_BufferCallback_OnDestroy(
      self,
      buffer,
    );
  }

  late final _Cronet_BufferCallback_OnDestroyPtr = _lookup<
      ffi.NativeFunction<
          ffi.Void Function(Cronet_BufferCallbackPtr,
              Cronet_BufferPtr)>>('Cronet_BufferCallback_OnDestroy');
  late final _Cronet_BufferCallback_OnDestroy =
      _Cronet_BufferCallback_OnDestroyPtr.asFunction<
          void Function(Cronet_BufferCallbackPtr, Cronet_BufferPtr)>();

  /// The app creates an instance of Cronet_BufferCallback by providing custom
  /// functions for each method.
  Cronet_BufferCallbackPtr Cronet_BufferCallback_CreateWith(
    Cronet_BufferCallback_OnDestroyFunc OnDestroyFunc,
  ) {
    return _Cronet_BufferCallback_CreateWith(
      OnDestroyFunc,
    );
  }

  late final _Cronet_BufferCallback_CreateWithPtr = _lookup<
          ffi.NativeFunction<
              Cronet_BufferCallbackPtr Function(
                  Cronet_BufferCallback_OnDestroyFunc)>>(
      'Cronet_BufferCallback_CreateWith');
  late final _Cronet_BufferCallback_CreateWith =
      _Cronet_BufferCallback_CreateWithPtr.asFunction<
          Cronet_BufferCallbackPtr Function(
              Cronet_BufferCallback_OnDestroyFunc)>();

  /// Destroy an instance of Cronet_Runnable.
  void Cronet_Runnable_Destroy(
    Cronet_RunnablePtr self,
  ) {
    return _Cronet_Runnable_Destroy(
      self,
    );
  }

  late final _Cronet_Runnable_DestroyPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(Cronet_RunnablePtr)>>(
          'Cronet_Runnable_Destroy');
  late final _Cronet_Runnable_Destroy = _Cronet_Runnable_DestroyPtr.asFunction<
      void Function(Cronet_RunnablePtr)>();

  /// Set and get app-specific Cronet_ClientContext.
  void Cronet_Runnable_SetClientContext(
    Cronet_RunnablePtr self,
    Cronet_ClientContext client_context,
  ) {
    return _Cronet_Runnable_SetClientContext(
      self,
      client_context,
    );
  }

  late final _Cronet_Runnable_SetClientContextPtr = _lookup<
      ffi.NativeFunction<
          ffi.Void Function(Cronet_RunnablePtr,
              Cronet_ClientContext)>>('Cronet_Runnable_SetClientContext');
  late final _Cronet_Runnable_SetClientContext =
      _Cronet_Runnable_SetClientContextPtr.asFunction<
          void Function(Cronet_RunnablePtr, Cronet_ClientContext)>();

  Cronet_ClientContext Cronet_Runnable_GetClientContext(
    Cronet_RunnablePtr self,
  ) {
    return _Cronet_Runnable_GetClientContext(
      self,
    );
  }

  late final _Cronet_Runnable_GetClientContextPtr = _lookup<
          ffi
          .NativeFunction<Cronet_ClientContext Function(Cronet_RunnablePtr)>>(
      'Cronet_Runnable_GetClientContext');
  late final _Cronet_Runnable_GetClientContext =
      _Cronet_Runnable_GetClientContextPtr.asFunction<
          Cronet_ClientContext Function(Cronet_RunnablePtr)>();

  /// Abstract interface Cronet_Runnable is implemented by the app.
  /// The following concrete methods forward call to app implementation.
  /// The app doesn't normally call them.
  void Cronet_Runnable_Run(
    Cronet_RunnablePtr self,
  ) {
    return _Cronet_Runnable_Run(
      self,
    );
  }

  late final _Cronet_Runnable_RunPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(Cronet_RunnablePtr)>>(
          'Cronet_Runnable_Run');
  late final _Cronet_Runnable_Run =
      _Cronet_Runnable_RunPtr.asFunction<void Function(Cronet_RunnablePtr)>();

  /// The app creates an instance of Cronet_Runnable by providing custom functions
  /// for each method.
  Cronet_RunnablePtr Cronet_Runnable_CreateWith(
    Cronet_Runnable_RunFunc RunFunc,
  ) {
    return _Cronet_Runnable_CreateWith(
      RunFunc,
    );
  }
